# LightTFHE

./: .gitignore  README.md
a_src/: CMakeLists.txt
a_src/include/: lwe-functions.h  lwebootstrappingkey.h  tfhe.h  tfhe_core.h  tfhe_gate_bootstrapping_functions.h  tgsw.h  tlwe.h
a_src/libtfhe/: CMakeLists.txt  numeric-functions.cpp  tfhe_garbage_collector.cpp  tfhe_gate_bootstrapping.cpp  tfhe_gate_bootstrapping_structures.cpp
lightsrc/: CMakeLists.txt  README.md
lightsrc/include/: lwekeyswitch.h  tfhe.h  tfhe_core.h  tfhe_garbage_collector.h  tfhe_gate_bootstrapping_functions.h  tfhe_gate_bootstrapping_structures.h  tgsw.h
lightsrc/libtfhe/: CMakeLists.txt  autogenerated.cpp  lwe-functions.cpp  tfhe_garbage_collector.cpp  tfhe_gate_bootstrapping.cpp  tgsw.cpp
src/: CMakeLists.txt
src/include/: lwebootstrappingkey.h  tfhe_gate_bootstrapping_structures.h
src/libtfhe/: CMakeLists.txt  tfhe_gate_bootstrapping.cpp  tfhe_gate_bootstrapping_structures.cpp  tgsw-fft-operations.cpp  tgsw-functions.cpp  tlwe-functions.cpp  tlwe.cpp
src/temp/: CMakeLists.txt
